# Background-Remover-For-Live-Videos

./: CMakeLists.txt  README.md  TestingOBJ.ipynb  dynamic_camera.cpp  dynamic_camera.h  main.cpp  static_camera.cpp  static_camera.h
